--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,11 @@ format                  = "tasks:format"
 create-eval-triplets    = "evaluation.triplet_generator:main"
 eval-triplets           = "evaluation.triplet_evaluator:main"
 
+explore-clues           = "tools.explore_clues:main"
 get-synsets             = "tools.get_synsets:main"
 get-hypernyms           = "tools.get_hypernyms:main"
+
+generate-hypernym-clues = "code_names_bot_clue_generator.hypernym_scores.generate_hypernym_clues:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
