--- a/static/evaluation_triplets.yaml
+++ b/static/evaluation_triplets.yaml
@@ -5,7 +5,7 @@
 - positive: [DECK, LUCK]
   negative: [CAPITAL]
   clues: [POKER, GAME]
-  nonclues: []
+  nonclues: [ENTITY]
 - positive: [AMAZON, PIE]
   negative: [CLUB]
   clues: [PRIME]
@@ -16,7 +16,7 @@
   nonclues: [TIME]
 - positive: [BATTERY, FILE]
   negative: [BEACH]
-  clues: [TECHNOLOGY, IPOD]
+  clues: [TECHNOLOGY, IPOD, ARTEFACT]
   nonclues: [ABSTRACTION]
 - positive: [BOTTLE, WATER]
   negative: [SPRING]
@@ -29,7 +29,7 @@
 - positive: [VAN, GLASS]
   negative: [TRUNK]
   clues: [WINDSHIELD]
-  nonclues: [TILBURG, ABSTRACTION]
+  nonclues: [TILBURG, ABSTRACTION, UNIT]
 - positive: [CASINO, BEIJING]
   negative: [LAB]
   clues: [MACAU]
@@ -109,7 +109,7 @@
 - positive: [COPPER, PRESS]
   negative: [LEPRECHAUN]
   clues: [MALLEABLE, ETCHING]
-  nonclues: [ATTRIBUTE]
+  nonclues: [ATTRIBUTE, ABSTRACTION]
 - positive: [CHICK, DOG]
   negative: [SPELL]
   clues: [ANIMAL]
@@ -149,7 +149,7 @@
 - positive: [JET, MISSILE]
   negative: [LEPRECHAUN]
   clues: [ARMY, AIRCRAFT, ARTEFACT]
-  nonclues: []
+  nonclues: [CONVEYANCE]
 - positive: [STRING, CONCERT]
   negative: [KNIFE]
   clues: [VIOLIN]
@@ -184,7 +184,7 @@
   nonclues: [NIMROD, ABSTRACTION]
 - positive: [BANK, SCHOOL]
   negative: [TABLET]
-  clues: [INSTITUTION]
+  clues: [INSTITUTION, ESTABLISHMENT]
   nonclues: [ISRAEL, AMOUNT]
 - positive: [HEAD, PRINCESS]
   negative: [CONTRACT]
@@ -197,7 +197,7 @@
 - positive: [CODE, POST]
   negative: [ICE CREAM]
   clues: [HTTP, ADDRESS]
-  nonclues: [ABSTRACTION]
+  nonclues: [ABSTRACTION, ALTER]
 - positive: [DROP, TAP]
   negative: [COTTON]
   clues: [WATER, ACT]
@@ -212,7 +212,7 @@
   nonclues: []
 - positive: [HORSE, KNIGHT]
   negative: [LASER]
-  clues: [CAVALRY, BEING]
+  clues: [CAVALRY, BEING, CHESSMAN]
   nonclues: [CHARGE]
 - positive: [MINT, JAM]
   negative: [ROBOT]
@@ -237,7 +237,7 @@
 - positive: [STOCK, BOND]
   negative: [BUTTON]
   clues: [FINANCE, INVESTOR]
-  nonclues: [ATTRIBUTE]
+  nonclues: [ATTRIBUTE, ABSTRACTION]
 - positive: [SPIKE, BLOCK]
   negative: [TAIL]
   clues: [VOLLEYBALL]
@@ -301,19 +301,19 @@
 - positive: [MINE, TRACK]
   negative: [MOUTH]
   clues: [DATA]
-  nonclues: [TOOL, INSTRUMENTALITY]
+  nonclues: [TOOL, INSTRUMENTALITY, ARTEFACT]
 - positive: [POOL, STREAM]
   negative: [DECK]
   clues: [WATER, TROUT, ACT]
   nonclues: []
 - positive: [BOOM, CRASH]
   negative: [BLOCK]
-  clues: [SOUND]
+  clues: [SOUND, EVENT]
   nonclues: [CONCORDE, GO]
 - positive: [GOLD, CARD]
   negative: [TAG]
   clues: [MONEY]
-  nonclues: [KAZAN, COMPONENT]
+  nonclues: [KAZAN, COMPONENT, ABSTRACTION]
 - positive: [CANADA, KING]
   negative: [WATCH]
   clues: [ENGLAND]
@@ -333,7 +333,7 @@
 - positive: [LIFE, ALIEN]
   negative: [ALPS]
   clues: [ALIVE]
-  nonclues: [EARTH, ABSTRACTION]
+  nonclues: [EARTH, ABSTRACTION, INDIVIDUAL]
 - positive: [POISON, BED]
   negative: [THIEF]
   clues: [SICK]
@@ -345,11 +345,11 @@
 - positive: [HAND, MOLE]
   negative: [BAND]
   clues: [SKIN]
-  nonclues: [AMOUNT]
+  nonclues: [AMOUNT, INDIVIDUAL]
 - positive: [CROWN, LEAD]
   negative: [KNIFE]
   clues: [MONARCH]
-  nonclues: [SECRETARIAT, AMOUNT]
+  nonclues: [SECRETARIAT, AMOUNT, BE]
 - positive: [SCORPION, SEAL]
   negative: [ROBOT]
   clues: [ANIMAL]
@@ -361,23 +361,23 @@
 - positive: [STRAW, GROUND]
   negative: [DANCE]
   clues: [GRASS]
-  nonclues: [FLAX, COLOR]
+  nonclues: [FLAX, COLOR, ABSTRACTION]
 - positive: [PUPIL, EYE]
   negative: [TRIANGLE]
   clues: [RETINA, BINOCULARS]
-  nonclues: [HOLE]
+  nonclues: [HOLE, OPENING]
 - positive: [SOUND, PIANO]
   negative: [KING]
   clues: [MUSIC, GARAGEBAND]
   nonclues: [PROPERTY]
 - positive: [FOREST, PALM]
   negative: [ANTARCTICA]
-  clues: [TREE]
+  clues: [TREE, PLANT]
   nonclues: [ABSTRACTION]
 - positive: [WEB, MATCH]
   negative: [DICE]
   clues: [TINDER]
-  nonclues: [PHP, ABSTRACTION]
+  nonclues: [PHP, ABSTRACTION, ARTEFACT]
 - positive: [BERLIN, STATE]
   negative: [OIL]
   clues: [GERMANY, EUROPE]
@@ -397,11 +397,11 @@
 - positive: [CONDUCTOR, FIELD]
   negative: [CZECH]
   clues: [ELECTRIC, INDUCTANCE, ARTEFACT]
-  nonclues: []
+  nonclues: [ENTITY]
 - positive: [ROCK, LOG]
   negative: [MILLIONAIRE]
   clues: [NATURE, MOSS]
-  nonclues: [ABSTRACTION]
+  nonclues: [ABSTRACTION, ENTITY]
 - positive: [SATELLITE, SPACE]
   negative: [MICROSCOPE]
   clues: [ORBIT]
@@ -421,10 +421,10 @@
 - positive: [TUBE, SHOT]
   negative: [GERMANY]
   clues: [SYRINGE]
-  nonclues: [ARTILLERY, ABSTRACTION]
+  nonclues: [ARTILLERY, ABSTRACTION, ARTEFACT]
 - positive: [DWARF, GHOST]
   negative: [DEGREE]
-  clues: [FICTION, WHITE, BEING]
+  clues: [FICTION, WHITE, BEING, INDIVIDUAL]
   nonclues: []
 - positive: [SATURN, HIMALAYAS]
   negative: [STICK]
@@ -433,7 +433,7 @@
 - positive: [AMBULANCE, CROSS]
   negative: [KIWI]
   clues: [DOCTOR, ARTEFACT]
-  nonclues: [GRAZ]
+  nonclues: [GRAZ, ENTITY]
 - positive: [ATLANTIS, MAMMOTH]
   negative: [PORT]
   clues: [EXTINCT]
@@ -444,7 +444,7 @@
   nonclues: [CHARLEMAGNE, ASSEMBLAGE]
 - positive: [MOUSE, WATCH]
   negative: [KETCHUP]
-  clues: [DEVICE]
+  clues: [DEVICE, ARTEFACT]
   nonclues: [TIME, ABSTRACTION]
 - positive: [HEART, PAPER]
   negative: [IRON]
@@ -465,7 +465,7 @@
 - positive: [DISEASE, CHECK]
   negative: [EYE]
   clues: [DIAGNOSIS]
-  nonclues: [RUST, ATTRIBUTE]
+  nonclues: [RUST, ATTRIBUTE, ABSTRACTION]
 - positive: [OPERA, CAST]
   negative: [FIELD]
   clues: [PERFORMANCE]
@@ -481,7 +481,7 @@
 - positive: [RING, THUMB]
   negative: [SHOE]
   clues: [FINGER, HAND]
-  nonclues: [DECORATION]
+  nonclues: [DECORATION, GO]
 - positive: [PILOT, SOLDIER]
   negative: [HOLLYWOOD]
   clues: [OCCUPATION, BEING]
@@ -505,7 +505,7 @@
 - positive: [SERVER, TRIP]
   negative: [BOX]
   clues: [EXPEDIA]
-  nonclues: [GMAIL, CAUSE]
+  nonclues: [GMAIL, CAUSE, DEVICE]
 - positive: [LOCH NESS, OLYMPUS]
   negative: [HIMALAYAS]
   clues: [MYTHICAL]
@@ -520,11 +520,11 @@
   nonclues: []
 - positive: [COMIC, JACK]
   negative: [TRACK]
-  clues: [PERSON, BEING]
+  clues: [PERSON, BEING, INDIVIDUAL]
   nonclues: [TORCHWOOD]
 - positive: [BUTTON, WASHER]
   negative: [POUND]
-  clues: [FLAT, CLOTHING]
+  clues: [FLAT, CLOTHING, ARTEFACT]
   nonclues: [CONSTRAINT]
 - positive: [PUMPKIN, MOON]
   negative: [SCORPION]
@@ -545,7 +545,7 @@
 - positive: [FIRE, BELL]
   negative: [SNOW]
   clues: [ALARM]
-  nonclues: [HELITACK, ABSTRACTION]
+  nonclues: [HELITACK, ABSTRACTION, ENTITY]
 - positive: [PIN, MERCURY]
   negative: [TURKEY]
   clues: [SMALL]
@@ -617,7 +617,7 @@
 - positive: [NOTE, SLIP]
   negative: [PANTS]
   clues: [PAPER, ACT]
-  nonclues: [VIOLIN]
+  nonclues: [VIOLIN, ABSTRACTION]
 - positive: [AGENT, NIGHT]
   negative: [CZECH]
   clues: [NINJA]
@@ -645,11 +645,11 @@
 - positive: [SOCK, DANCE]
   negative: [VACUUM]
   clues: [LEGS, SHOE]
-  nonclues: []
+  nonclues: [ENTITY]
 - positive: [FIGHTER, BAR]
   negative: [PLAY]
   clues: [BOUNCER]
-  nonclues: [HEALTH, ARTEFACT]
+  nonclues: [HEALTH, ARTEFACT, OBJECT]
 - positive: [WAKE, DAY]
   negative: [LOG]
   clues: [MORNING]
@@ -661,11 +661,11 @@
 - positive: [TOOTH, NEEDLE]
   negative: [PUMPKIN]
   clues: [SHARP]
-  nonclues: [FILE, ARTEFACT]
+  nonclues: [FILE, ARTEFACT, ENTITY]
 - positive: [THEATER, STAR]
   negative: [SERVER]
   clues: [ACTOR]
-  nonclues: [METRO-GOLDWYN-MAYER, ABSTRACTION]
+  nonclues: [METRO-GOLDWYN-MAYER, ABSTRACTION, STRUCTURE]
 - positive: [TABLE, FORK]
   negative: [CAT]
   clues: [DINING]
@@ -685,7 +685,7 @@
 - positive: [SHOE, ROOT]
   negative: [STAFF]
   clues: [GROUND]
-  nonclues: [WATER, CHANGE]
+  nonclues: [WATER, CHANGE, OBJECT]
 - positive: [DRAGON, SPELL]
   negative: [AMBULANCE]
   clues: [MAGIC]
@@ -697,15 +697,15 @@
 - positive: [TAG, RAY]
   negative: [THEATER]
   clues: [LASER]
-  nonclues: [STING, GO]
+  nonclues: [STING, GO, OBJECT]
 - positive: [CIRCLE, MARBLE]
   negative: [CLOAK]
   clues: [ROUND]
-  nonclues: [ROMBLON, ABSTRACTION]
+  nonclues: [ROMBLON, ABSTRACTION, MATTER]
 - positive: [SQUARE, CENTER]
   negative: [SPINE]
   clues: [GEOMETRY]
-  nonclues: [PONTEVEDRA, ARTEFACT]
+  nonclues: [PONTEVEDRA, ARTEFACT, INDIVIDUAL]
 - positive: [ANTARCTICA, PENGUIN]
   negative: [BATTERY]
   clues: [ICE]
@@ -713,8 +713,8 @@
 - positive: [TIE, POINT]
   negative: [GOLD]
   clues: [SCORE, OVERTIME, ACT]
-  nonclues: []
+  nonclues: [ARTEFACT]
 - positive: [PITCH, RACKET]
   negative: [ROSE]
   clues: [SOUND, ACTIVITY]
-  nonclues: [LORDS]
+  nonclues: [LORDS, DISPLACE]
