--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ isort = "^5.10.1"
 black = "^22.6.0"
 PyYAML = "^6.0"
 nltk = "^3.7"
+requests = "^2.28.1"
 
 [tool.poetry.dev-dependencies]
 
@@ -19,6 +20,7 @@ setup                   = "tasks:setup"
 
 create-eval-triplets    = "evaluation.triplet_generator:main"
 eval-triplets           = "evaluation.triplet_evaluator:main"
+migrate-triplets        = "evaluation.triplet_migrate:main"
 
 explore-clues           = "tools.explore_clues:main"
 get-synsets             = "tools.get_synsets:main"
